syntax = "proto3";
package pmsg;

option go_package="./pmsg";

import "proto/groupresult.proto";
import "proto/groupuser.proto";

message RoundUploadMessage {
    string RoomId = 1;          //主播房间id
    string AnchorOpenId = 2;    //主播id
    int64 RoundId = 3;          //对局id
    repeated GroupResult GroupResultList = 4;   //对局结果列表
    repeated GroupUser GroupUserList = 5;       //玩家列表
    int64 GameType = 6;         //游戏类型  // 0: 普通模式 1： 单人模式，单人胜利
}